--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
+    "tina": "tinacms dev",
     "build": "astro check && astro build && jampack ./dist",
     "preview": "astro preview",
     "sync": "astro sync",
@@ -25,6 +26,7 @@
     "remark-toc": "^9.0.0",
     "satori": "^0.10.11",
     "tailwindcss": "^3.4.1",
+    "tinacms": "^1.5.28",
     "typescript": "^5.3.3"
   },
   "devDependencies": {
@@ -33,7 +35,9 @@
     "@astrojs/tailwind": "^5.1.0",
     "@divriots/jampack": "^0.23.2",
     "@tailwindcss/typography": "^0.5.10",
+    "@tinacms/cli": "^1.5.39",
     "@types/github-slugger": "^1.3.0",
+    "@types/node": "^20.11.24",
     "@types/react": "^18.2.48",
     "@typescript-eslint/parser": "^6.19.0",
     "astro-eslint-parser": "^0.16.2",
