--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@astrojs/check": "^0.5.6",
     "@astrojs/rss": "^4.0.2",
     "@resvg/resvg-js": "^2.6.0",
+    "@sentry/astro": "^7.104.0",
+    "@spotlightjs/astro": "^1.0.16",
     "astro": "^4.2.1",
     "fuse.js": "^7.0.0",
     "github-slugger": "^2.0.0",
